# theke

./: .env.example  .gitignore  Taskfile.yml  dev.sh
backend/: pyproject.toml  test_citation_extraction.py  test_citation_patterns.py  test_inline_extractor.py  test_pdf_citation.py  test_simple_extraction.py
backend/src/theke/: main.py  types.py
backend/src/theke/api/: auto_tags.py  citations.py  external.py  papers.py  recommendations.py  settings.py  tags.py
backend/src/theke/core/: config.py  database.py
backend/src/theke/crud/: citation.py  job.py  paper.py  setting.py  tag.py
backend/src/theke/migrations/: upgrade_citation_system.py
backend/src/theke/models/: __init__.py  citation.py  job.py  paper.py  paper_tag.py  setting.py  tag.py
backend/src/theke/schemas/: __init__.py  citation.py  job.py  paper.py  setting.py  tag.py
backend/src/theke/services/: acm_service.py  auto_tagging_service.py  background_tasks.py  bidirectional_citation_service.py  citation_extractor.py  citation_formatter.py  crossref_service.py  dblp_service.py  enhanced_citation_extractor.py  external_search.py  github_service.py  inline_citation_extractor.py  llm_service.py  openalex_service.py  pdf_processor.py  recommendation_service.py  semantic_scholar_service.py  thumbnail_generator.py
backend/src/theke/utils/: errors.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/components/ui/: MarkdownRenderer.tsx  (+1 more)
frontend/src/hooks/: useDarkMode.ts  useDebounce.ts
frontend/src/pages/: CitationManagement.tsx  Dashboard.tsx  NetworkGraph.tsx  PaperDetail.tsx  PaperEdit.tsx  PaperSearch.tsx  Search.tsx  Settings.tsx  TagManagement.tsx  WatchList.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
